infra/k8s/auth-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-auth 
  template: 
    metadata:
      labels:
        app: ticketing-auth
    spec:
      containers:
        - name: ticketing-auth
          image: ticketing-auth:latest
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-auth-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: ticketing-auth
  ports:
    - name: ticketing-auth
      protocol: TCP
      port: 4000
      targetPort: 4000
